# fefu_science

./: .coveragerc  .env  .gitignore  Makefile  Procfile  pyproject.toml  requirements.txt
science/: manage.py
science/apps/accounts/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py
science/apps/accounts/migrations/: 0001_initial.py  0002_auto_20200508_0151.py  0002_auto_20200508_0331.py  0003_merge_20200608_2259.py
science/apps/accounts/tests/: test_apps.py  test_urls.py  (+2 more)
science/apps/activities/: admin.py  forms.py  models.py  tables.py  text.py  urls.py  views.py
science/apps/articles/: admin.py  apps.py  filters.py  models.py  tables.py  urls.py  views.py
science/apps/common/: apps.py  models.py  text.py  urls.py  views.py
science/apps/conferences/: admin.py  forms.py  models.py  tables.py  text.py  urls.py  views.py
science/apps/contests/: forms.py  models.py  tables.py  text.py  urls.py  views.py
science/apps/grants/: forms.py  models.py  tables.py  text.py  urls.py  views.py
science/apps/papers/: forms.py  models.py  tables.py  urls.py  views.py
science/apps/popular_science/: admin.py  apps.py  forms.py  models.py  tables.py  urls.py  views.py
science/apps/research/: admin.py  forms.py  models.py  tables.py  urls.py  views.py
science/apps/scholarships/: admin.py  forms.py  models.py  tables.py  text.py  urls.py  views.py
science/apps/textbooks/: admin.py  forms.py  models.py  tables.py  text.py  urls.py  views.py
science/crud/: models.py  tables.py  utils.py  views.py
science/science/: asgi.py  settings.py  urls.py  wsgi.py
(+120 files in other folders)
